--- a/index.html
+++ b/index.html
@@ -26,9 +26,28 @@
                 <h3 id="heading"></h3>
             </div>
         </div>
-        <div id="aboutDiv" style="margin-top: 1000px; margin-bottom: 500px;">
+        
+        <div id="aboutDiv" style="margin-top: 1000px;">
             <h1 id="about">About</h1>
             <p id="aboutP"></p>
+        </div>
+        
+        <div id="contactDiv" style="margin-top: 1000px;">
+            <h1 id="contact">Contact</h1>
+            <p id="contactP"></p>
+        </div>
+
+        <div id="projectsDiv" style="margin-top: 1000px;">
+            <h1 id="projects">Projects</h1>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
         </div>
     </body>
 </html>
