--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a class="link" href="#about"><img src="question.png" alt="about" style="height: 50px;"> About</a>
                 <a class="link" href="#contact"><img src="at.png" alt="contact" style="height: 50px;"> Contact</a>
                 <a class="link" href="#github"><img src="github.png" alt="github" style="height: 50px;"> GitHub</a>
-                <a class="link" href="#projects"><img src=""> Projects</a>
+                <a class="link" href="#projects"><img src="project.png" alt="projects" style="height: 50px;"> Projects</a>
         </div>
         
     </head>
