--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
             Dario Karanovic
         </title>
         <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="cube.png">
-        <div class="linksDiv" id="topnav">
-                <a class="link" href="#top"><img src="house.png" alt="home" style="height: 30px;"> Home</a>
+        <div class="navbar" id="topnav">
+                <a class="link" href="#home"><img src="house.png" alt="home" style="height: 30px;"> Home</a>
                 <a class="link" href="#about"><img src="question.png" alt="about" style="height: 30px;"> About</a>
                 <a class="link" href="#contact"><img src="at.png" alt="contact" style="height: 30px;"> Contact</a>
                 <a class="link" href="#github"><img src="github.png" alt="github" style="height: 30px;"> GitHub</a>
                 <a class="link" href="#projects"><img src="project.png" alt="projects" style="height: 30px;"> Projects</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <a href="javascript:void(0);" class="icon" onclick="decreaseMenu()">
                     <i class="fa fa-bars"></i>
                 </a>
         </div>
@@ -22,12 +23,12 @@
     <body onload="typeWriter2(); typeWriter(); typeWriter3();">
         <script src="main.js"></script>
         <script>
-            function myFunction() {
+            function decreaseMenu() {
                 var x = document.getElementById("topnav");
-                if (x.className === "linksDiv") {
+                if (x.className === "navbar") {
                 x.className += " responsive";
                 } else {
-                x.className = "linksDiv";
+                x.className = "navbar";
                 }
             }
         </script>
