--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             }
         </script>
         <div class="mainDiv">
+            <div id="home"></div>
             <div class="first">
                 <h1 id="name"></h1>
             </div>
