--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         
     </head>
-    <body onload="typeWriter2(); typeWriter(); typeWriter3();">
+    <body onload="typeWriter2(); typeWriter(); typeWriter3(); typeWriter4();">
         <script src="main.js"></script>
         <script>
             function decreaseMenu() {
@@ -51,6 +51,12 @@
         <div id="contactDiv" style="margin-top: 1000px;">
             <h1 id="contact">Contact</h1>
             <p id="contactP"></p>
+            <div style="text-align: center; display: block;">
+                <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink">
+                    Send Feedback
+                </a>
+            </div>
+
         </div>
 
         <div id="projectsDiv" style="margin-top: 1000px;">
