--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a class="link" href="#home"><img src="house.png" alt="home" style="height: 30px;"> Home</a>
                 <a class="link" href="#about"><img src="question.png" alt="about" style="height: 30px;"> About</a>
                 <a class="link" href="#contact"><img src="at.png" alt="contact" style="height: 30px;"> Contact</a>
-                <a class="link" href="#github"><img src="github.png" alt="github" style="height: 30px;"> GitHub</a>
+                <a class="link" href="https://github.com/theOriginalPerson?tab=repositories"><img src="github.png" alt="github" style="height: 30px;"> GitHub</a>
                 <a class="link" href="#projects"><img src="project.png" alt="projects" style="height: 30px;"> Projects</a>
                 <a href="javascript:void(0);" class="icon" onclick="decreaseMenu()">
                     <i class="fa fa-bars"></i>
@@ -53,10 +53,9 @@
             <p id="contactP"></p>
             <div style="text-align: center; display: block;">
                 <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink">
-                    Send Feedback
+                    izumlaboratories feedback
                 </a>
             </div>
-
         </div>
 
         <div id="projectsDiv" style="margin-top: 1000px;">
