--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <div id="projectsDiv" style="margin-top: 1000px;">
                 <h1 id="projects">Projects</h1>
                 <div class="project1">
-                    <a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" class="projectLink" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.</a><br>
+                    <a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" class="projectLink" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.
+                    </a><br>
                 
                 </div>
                 <div class="project2">
