--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="cube.png">
         <div class="navbar" id="topnav">
-                <a class="link" href="#home"><img src="house.png" alt="home" style="height: 30px;"> Home</a>
-                <a class="link" href="#about"><img src="question.png" alt="about" style="height: 30px;"> About</a>
-                <a class="link" href="#contact"><img src="at.png" alt="contact" style="height: 30px;"> Contact</a>
-                <a class="link" href="https://github.com/theOriginalPerson?tab=repositories" target="_blank"><img src="github.png" alt="github" style="height: 30px;"> GitHub</a>
-                <a class="link" href="#projects"><img src="project.png" alt="projects" style="height: 30px;"> Projects</a>
-                <a href="javascript:void(0);" class="icon" onclick="decreaseMenu()">
-                    <i class="fa fa-bars"></i>
-                </a>
+            <a class="link" onclick="window.location.reload();"><img src="gearicon.png" alt="izum laboratories" style="height: 30px;"></a>
+            <a class="link" href="#home"><img src="house.png" alt="home" style="height: 30px;"> Home</a>
+            <a class="link" href="#about"><img src="question.png" alt="about" style="height: 30px;"> About</a>
+            <a class="link" href="#contact"><img src="at.png" alt="contact" style="height: 30px;"> Contact</a>
+            <a class="link" href="https://github.com/theOriginalPerson?tab=repositories" target="_blank"><img src="github.png" alt="github" style="height: 30px;"> GitHub</a>
+            <a class="link" href="#projects"><img src="project.png" alt="projects" style="height: 30px;"> Projects</a>
+            <a href="javascript:void(0);" class="icon" onclick="decreaseMenu()">
+                <i class="fa fa-bars"></i>
+            </a>
         </div>
         
     </head>
