--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                 </div>
             </div>
             
-            <div id="aboutDiv" style="margin-top: 1000px;">
+            <div id="aboutDiv" class="aboutDivClass" style="padding-top: 1000px;">
                 <h1 id="about">About</h1>
                 <p id="aboutP"></p>
             </div>
 
-            <div id="projectsDiv" style="margin-top: 1000px;">
+            <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
                 <h1 id="projects">Projects</h1>
                 <div class="project1">
                     <a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" class="projectLink" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.
@@ -61,7 +61,7 @@
                     <a href="https://finalprojectop.ca/" class="projectLink" target="_blank"> - "A new proposal, with respect to the future of AI, in Automotive Engineering"; Website I built for an Artificial Intelligence class.</a>
                 </div>
             </div>        
-            <div id="contactDiv" style="margin-top: 1000px; padding-bottom: 500px;">
+            <div id="contactDiv" class="contactDivClass" style="margin-top: 1000px; padding-bottom: 500px;">
                 <h1 id="contact">Contact</h1>
                 <p id="contactP"></p>
                 <div style="text-align: center; display: block;">
