--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="https://finalprojectop.ca/" class="projectLink" target="_blank"> - "A new proposal, with respect to the future of AI, in Automotive Engineering"; Website I built for an Artificial Intelligence class.</a>
                 </div>
             </div>        
-            <div id="contactDiv" class="contactDivClass" style="margin-top: 1000px; padding-bottom: 500px;">
+            <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
                 <h1 id="contact">Contact</h1>
                 <p id="contactP"></p>
                 <div style="text-align: center; display: block;">
