--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="cube.png">
         <div class="navbar" id="topnav">
-            <a class="link" onclick="window.location.reload();"><img src="gearicon.png" alt="izum laboratories" style="height: 50px;"></a>
-            <a class="link" href="#home"><img src="house.png" alt="home" style="height: 30px;"> Home</a>
-            <a class="link" href="#about"><img src="question.png" alt="about" style="height: 30px;"> About</a>
-            <a class="link" href="#contact"><img src="at.png" alt="contact" style="height: 30px;"> Contact</a>
-            <a class="link" href="https://github.com/theOriginalPerson?tab=repositories" target="_blank"><img src="github.png" alt="github" style="height: 30px;"> GitHub</a>
-            <a class="link" href="#projects"><img src="project.png" alt="projects" style="height: 30px;"> Projects</a>
+            <a onclick="window.location.reload();"><img src="gearicon.png" alt="izum laboratories" style="height: 50px;"></a>
+            <a href="#home"><img src="house.png" alt="home" style="height: 30px;"> Home</a>
+            <a href="#about"><img src="question.png" alt="about" style="height: 30px;"> About</a>
+            <a href="#contact"><img src="at.png" alt="contact" style="height: 30px;"> Contact</a>
+            <a href="https://github.com/theOriginalPerson?tab=repositories" target="_blank"><img src="github.png" alt="github" style="height: 30px;"> GitHub</a>
+            <a href="#projects"><img src="project.png" alt="projects" style="height: 30px;"> Projects</a>
             <a href="javascript:void(0);" class="icon" onclick="decreaseMenu()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -36,11 +36,11 @@
         <div class="margins">
             <div class="mainDiv">
                 <div id="home"></div>
-                <div class="first">
+                <div>
                     <h1 id="name"></h1>
                 </div>
 
-                <div class="second">
+                <div>
                     <h3 id="heading"></h3>
                 </div>
             </div>
