--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="aboutDiv" class="aboutDivClass" style="padding-top: 1000px;">
                 <h1 id="about">About</h1>
                 <p id="aboutP"></p>
-                <p id="date" style="color: white; text-align: center;"></p>
+                <p id="date" style="color: white; text-align: center; animation: fadeIn 3s; animation-delay: 10.5s;"></p>
                 <script>
                     var timeout = 11000;
                     
@@ -62,20 +62,21 @@
 
             <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
                 <h1 id="projects">Projects</h1>
-                <div class="project1">
-                    <a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" class="projectLink" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.
-                    </a><br>
-                
+                <div>
+                    <span class="project1" style="vertical-align: top; height: 70px; width: 70px; border-radius: 50%; background-color: white; text-align: center; float: left; overflow: hidden;"><a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US"><img style="height: 50px; padding-top: 10px; overflow: hidden;" src="https://play-lh.googleusercontent.com/J7n024w9iteQNxZLdjDnptnPuJnVeNcgj639eBMpaMye7f6PH2-j5Mtcansw0-B5tfoS=s180-rw" alt="4hzproductions"></a></span>
+                    <a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" style="float: right; padding-left: 100px;" class="projectLink" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.</a><br>
                 </div>
-                <div class="project2">
-                    <a href="https://finalprojectop.ca/" class="projectLink" target="_blank"> - "A new proposal, with respect to the future of AI, in Automotive Engineering"; Website I built for an Artificial Intelligence class.</a>
+                <div>
+                    <span class="project2" style="height: 70px; width: 70px; border-radius: 50%; background-color: white; text-align: center; float: left; overflow: hidden;"><a href="https://finalprojectop.ca/"><img style="height: 40px; padding-top: 15px; overflow: hidden;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></a></span>
+                    <a href="https://finalprojectop.ca/" style="float: right; padding-left: 100px;" class="projectLink" target="_blank"> - "A new proposal, with respect to the future of AI, in Automotive Engineering"; Website I built for an Artificial Intelligence class.</a>
                 </div>
             </div>        
             <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
                 <h1 id="contact">Contact</h1>
                 <p id="contactP"></p>
                 <div style="text-align: center; display: block;">
-                    <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink">
+                    <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink" style="padding-top: 50px; float: left; text-align: center;">
+                        <img style="height: 50px;" src="gearicon.png" alt="izum laboratories">
                         izum laboratories feedback
                     </a>
                 </div>
