--- a/index.html
+++ b/index.html
@@ -63,12 +63,16 @@
             <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
                 <h1 id="projects">Projects</h1>
                 <div>
-                    <span class="project1" style="vertical-align: top; height: 70px; width: 70px; border-radius: 50%; background-color: white; text-align: center; float: left; overflow: hidden;"><a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US"><img style="height: 50px; padding-top: 10px; overflow: hidden;" src="https://play-lh.googleusercontent.com/J7n024w9iteQNxZLdjDnptnPuJnVeNcgj639eBMpaMye7f6PH2-j5Mtcansw0-B5tfoS=s180-rw" alt="4hzproductions"></a></span>
-                    <a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" style="float: right; padding-left: 100px;" class="projectLink" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.</a><br>
+                    <img style="float: left; height: 70px; border-radius: 50%; background-color: white;" src="https://play-lh.googleusercontent.com/J7n024w9iteQNxZLdjDnptnPuJnVeNcgj639eBMpaMye7f6PH2-j5Mtcansw0-B5tfoS=s180-rw" alt="4hzproductions">
                 </div>
                 <div>
-                    <span class="project2" style="height: 70px; width: 70px; border-radius: 50%; background-color: white; text-align: center; float: left; overflow: hidden;"><a href="https://finalprojectop.ca/"><img style="height: 40px; padding-top: 15px; overflow: hidden;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></a></span>
-                    <a href="https://finalprojectop.ca/" style="float: right; padding-left: 100px;" class="projectLink" target="_blank"> - "A new proposal, with respect to the future of AI, in Automotive Engineering"; Website I built for an Artificial Intelligence class.</a>
+                    <a class="projectLink1" href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.</a>
+                </div>
+                <div style="padding-top: 50px;">
+                    <img style="float: left; height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop">
+                </div>
+                <div>
+                    <a class="projectLink2" href="https://finalprojectop.ca" target="_blank"> - "A new proposal, with respect to the future of AI, in Automotive Engineering"; Website I built for an Artificial Intelligence class.</a>
                 </div>
             </div>        
             <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
