--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </script>
         <div class="margins">
             <div class="mainDiv">
+                <div id="dummyDiv"></div>
                 <div id="home"></div>
                 <div>
                     <h1 id="name"></h1>
@@ -46,6 +47,7 @@
             </div>
             
             <div id="aboutDiv" class="aboutDivClass" style="padding-top: 1000px;">
+                <div id="dummyAbout"></div>
                 <h1 id="about">About</h1>
                 <p id="aboutP"></p>
                 <p id="date" style="color: white; text-align: center; animation: fadeIn 3s; animation-delay: 10.5s;"></p>
@@ -78,9 +80,9 @@
             <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
                 <h1 id="contact">Contact</h1>
                 <p id="contactP"></p>
-                <div style="text-align: center; display: block;">
-                    <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink" style="padding-top: 50px; float: left; text-align: center;">
-                        <img style="height: 50px;" src="gearicon.png" alt="izum laboratories">
+                <div style="text-align: center; display: block; padding-top: 50px;">
+                    <img style="height: 50px; vertical-align: middle; padding-bottom: 20px;" src="gearicon.png" alt="izum laboratories">
+                    <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink" style="text-align: center;">
                         izum laboratories feedback
                     </a>
                 </div>
