--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 <i class="fa fa-bars"></i>
             </a>
         </div>
-        
     </head>
     <body onload="typeWriter2(); typeWriter(); typeWriter3(); typeWriter4();">
         <script src="main.js"></script>
@@ -57,7 +56,7 @@
             </div>
             
             <div id="aboutDiv" class="aboutDivClass" style="padding-top: 1000px;">
-                <div id="dummyAbout"></div>
+                <h2 id="dummyAbout"></h2>
                 <h1 id="about">About</h1>
                 <p id="aboutP"></p>
                 <p id="date" style="color: white; text-align: center; animation: fadeIn 3s; animation-delay: 10.5s;"></p>
@@ -73,6 +72,7 @@
             </div>
 
             <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
+                <h2 id="dummyProject"></h2>
                 <h1 id="projects">Projects</h1>
                 <div>
                     <img style="float: left; height: 70px; border-radius: 50%; background-color: white;" src="https://play-lh.googleusercontent.com/J7n024w9iteQNxZLdjDnptnPuJnVeNcgj639eBMpaMye7f6PH2-j5Mtcansw0-B5tfoS=s180-rw" alt="4hzproductions">
@@ -88,6 +88,7 @@
                 </div>
             </div>        
             <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
+                <h2 id="dummyContact"></h2>
                 <h1 id="contact">Contact</h1>
                 <p id="contactP"></p>
                 <div style="text-align: center; display: block; padding-top: 50px;">
