--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
         </div>
     </head>
-    <body onload="typeWriter2(); typeWriter(); typeWriter3(); typeWriter4();">
+    <body onload="typeWriter2(); typeWriter(); typeWriter3(); typeWriter4(); wallpaperSwitch();">
         <script src="main.js"></script>
         <script>
             function decreaseMenu() {
@@ -60,7 +60,7 @@
                 <h1 id="about">About</h1>
                 <p id="aboutP"></p>
                 <p id="date" style="color: white; text-align: center; animation: fadeIn 3s; animation-delay: 10.5s;"></p>
-                <script>
+                <script class="timeScript">
                     var timeout = 11000;
                     
                     setTimeout(function() {
