--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h2 id="dummyProject"></h2>
                 <h1 id="projects">Projects</h1>
                 <div>
-                    <img style="float: left; height: 70px; border-radius: 50%; background-color: white;" src="https://play-lh.googleusercontent.com/J7n024w9iteQNxZLdjDnptnPuJnVeNcgj639eBMpaMye7f6PH2-j5Mtcansw0-B5tfoS=s180-rw" alt="4hzproductions">
+                    <img style="float: left; height: 70px; border-radius: 50%; background-color: white;" src="4hz.webp" alt="4hzproductions">
                 </div>
                 <div>
                     <a class="projectLink1" href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.</a>
