--- a/index.html
+++ b/index.html
@@ -74,18 +74,23 @@
             <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
                 <h2 id="dummyProject"></h2>
                 <h1 id="projects">Projects</h1>
-                <div>
-                    <img style="float: left; height: 70px; border-radius: 50%; background-color: white;" src="4hz.webp" alt="4hzproductions">
-                </div>
-                <div>
-                    <a class="projectLink1" href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank"> - Parkinson's VR Experience for Google Cardboard; App I built for a psychology class.</a>
-                </div>
-                <div style="padding-top: 50px;">
-                    <img style="float: left; height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop">
-                </div>
-                <div>
-                    <a class="projectLink2" href="https://finalprojectop.ca" target="_blank"> - "A new proposal, with respect to the future of AI, in Automotive Engineering"; Website I built for an Artificial Intelligence class.</a>
-                </div>
+                <table class="projectsTable" style="width: 100%; height: fit-content;">
+                    <tr>
+                      <th>Project Logo</th>
+                      <th>Project Name</th>
+                      <th>Link</th>
+                    </tr>
+                    <tr>
+                      <td><img style="float: left; height: 70px; border-radius: 50%; background-color: white;" src="4hz.webp" alt="4hzproductions"></td>
+                      <td>Parkinson's VR Simulation for Google Cardboard</td>
+                      <td><a class="projectLink1" href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank">ClickHere</a></td>
+                    </tr>
+                    <tr>
+                      <td><img style="float: left; height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></td>
+                      <td>Final Project for a Class in Artificial Intelligence<br>Topic: New Automotive Engineering Proposal</td>
+                      <td><a class="projectLink2" href="https://finalprojectop.ca" target="_blank">ClickHere</a></td>
+                    </tr>
+                </table>
             </div>        
             <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
                 <h2 id="dummyContact"></h2>
