--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
         </div>
     </head>
-    <body onload="typeWriter2(); typeWriter(); typeWriter3(); typeWriter4(); wallpaperSwitch(); colorSwitch();">
+    <body onload="typeWriter(); typeWriter2(); typeWriter3(); typeWriter4(); wallpaperSwitch(); colorSwitch();">
         <script src="main.js"></script>
         <script>
             function decreaseMenu() {
