--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                       <th>Link</th>
                     </tr>
                     <tr>
-                      <td><img style="float: left; height: 70px; border-radius: 50%; background-color: white;" src="4hz.webp" alt="4hzproductions"></td>
+                      <td><a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank"><img style="height: 70px; border-radius: 50%; background-color: white;" src="4hz.webp" alt="4hzproductions"></a></td>
                       <td>Parkinson's VR Simulation for Google Cardboard</td>
                       <td><a class="projectLink1" href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank">ClickHere</a></td>
                     </tr>
                     <tr>
-                      <td><img style="float: left; height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></td>
+                      <td><a href="https://finalprojectop.ca" target="_blank"><img style="height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></a></td>
                       <td>Final Project for a Class in Artificial Intelligence<br>Topic: New Automotive Engineering Proposal</td>
                       <td><a class="projectLink2" href="https://finalprojectop.ca" target="_blank">ClickHere</a></td>
                     </tr>
