more final touches

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </tr>
                         <tr>
                         <td><a href="https://finalprojectop.ca" target="_blank"><img style="height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></a></td>
-                        <td>Final Project for a Class in Artificial Intelligence<br>Topic: New Automotive Engineering Proposal</td>
+                        <td><br>Final Project for a Class in Artificial Intelligence<br>Topic: New Automotive Engineering Proposal</td>
                         <td><a class="projectLink2" href="https://finalprojectop.ca" target="_blank">ClickHere</a></td>
                         </tr>
                     </table>
