--- a/index.html
+++ b/index.html
@@ -67,12 +67,7 @@
                     <h2 id="dummyAbout"></h2>
                     <h1 id="about">About</h1>
                     <p id="aboutP" style="text-align: left;"></p>
-                    <a class="aboutClick">-> Click to unlock information</a>
-                    <script>
-                        var aboutClick = document.getElementsByClassName("aboutClick");
-                        aboutClick.addEventListener("click", typeWriter3());
-                    </script>
-                    
+                    <a class="aboutClick" onclick="typeWriter3()">-> Click to unlock information</a>
                 </div>
 
                 <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
@@ -99,7 +94,7 @@
                 <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
                     <h2 id="dummyContact"></h2>
                     <h1 id="contact">Contact</h1>
-                    <p id="contactP">If you have any questions, concerns, or feedback of any sort, please give me a shout at this link below. If the link does not open, fear not, just email me at: izumlaboratories@gmail.com</p>
+                    <p id="contactP" style="font-size: 2vw;">If you have any questions, concerns, or feedback of any sort, please give me a shout at this link below. If the link does not open, fear not, just email me at: izumlaboratories@gmail.com</p>
                     <div style="text-align: center; display: block; padding-top: 50px;">
                         <img style="height: 50px; vertical-align: middle; padding-bottom: 20px;" src="gearicon.png" alt="izum laboratories">
                         <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink" style="text-align: center;">
