--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h2 id="dummyAbout"></h2>
                     <h1 id="about">About</h1>
                     <p id="aboutP" style="text-align: left;"></p>
-                    <a class="aboutClick" onclick="typeWriter3()">-> Click to unlock information</a>
+                    <a onmousedown="typeWriter3()" id="aboutClick">-> Click to unlock information</a>
                 </div>
 
                 <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
