fixed fonts to fit at screen sizes. fixed the sticky navbar

--- a/index.html
+++ b/index.html
@@ -52,57 +52,59 @@
 
                 <div class="mainDiv">
                     <div id="dummyDiv"></div>
-                    <div id="home"></div>
-                    <div>
-                        <h1 id="name"></h1>
+                    <div id="home">
+                        <div>
+                            <h1 id="name"></h1>
+                        </div>
+                        <div>
+                            <h3 id="heading"></h3>
+                        </div>
                     </div>
-                    <div>
-                        <h3 id="heading"></h3>
-                    </div>
+                    
                 </div>    
             </div>    
 
-            <div class="margins">
-                <div id="aboutDiv" class="aboutDivClass" style="padding-top: 1000px;">
-                    <h2 id="dummyAbout"></h2>
-                    <h1 id="about">About</h1>
-                    <p id="aboutP" style="text-align: left;"></p>
-                    <a onmousedown="typeWriter3()" id="aboutClick">-> Click to unlock information</a>
-                </div>
+            <div id="aboutDiv" class="aboutDivClass" style="padding-top: 1000px;">
+                <h2 id="dummyAbout"></h2>
+                <h1 id="about">About</h1>
+                <p id="aboutP" style="text-align: left;"></p>
+                <a onclick="typeWriter3()" id="aboutClick">-> Click to unlock information</a>
+            </div>
 
-                <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
-                    <h2 id="dummyProject"></h2>
-                    <h1 id="projects">Projects</h1>
-                    <table class="projectsTable" style="width: 100%; height: fit-content;">
-                        <tr>
-                            <th>Project Logo</th>
-                            <th>Project Name</th>
-                            <th>Link</th>
-                        </tr>
-                        <tr>
-                            <td><a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank"><img style="height: 70px; border-radius: 50%; background-color: white;" src="4hz.webp" alt="4hzproductions"></a></td>
-                            <td>Parkinson's VR Simulation for Google Cardboard</td>
-                            <td><a class="projectLink1" href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank">ClickHere</a></td>
-                        </tr>
-                        <tr>
-                        <td><a href="https://finalprojectop.ca" target="_blank"><img style="height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></a></td>
-                        <td><br>Final Project for a Class in Artificial Intelligence<br>Topic: New Automotive Engineering Proposal</td>
-                        <td><a class="projectLink2" href="https://finalprojectop.ca" target="_blank">ClickHere</a></td>
-                        </tr>
-                    </table>
-                </div>        
-                <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
-                    <h2 id="dummyContact"></h2>
-                    <h1 id="contact">Contact</h1>
-                    <p id="contactP" style="font-size: 2vw;">If you have any questions, concerns, or feedback of any sort, please give me a shout at this link below. If the link does not open, fear not, just email me at: izumlaboratories@gmail.com</p>
-                    <div style="text-align: center; display: block; padding-top: 50px;">
-                        <img style="height: 50px; vertical-align: middle; padding-bottom: 20px;" src="gearicon.png" alt="izum laboratories">
-                        <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink" style="text-align: center;">
-                            click here to email me
-                        </a>
-                    </div>
+            <div id="projectsDiv" class="projectsDivClass" style="padding-top: 1000px;">
+                <h2 id="dummyProject"></h2>
+                <h1 id="projects">Projects</h1>
+                <table class="projectsTable" style="width: 100%; height: fit-content;">
+                    <tr>
+                        <th>Project Logo</th>
+                        <th>Project Name</th>
+                        <th>Link</th>
+                    </tr>
+                    <tr>
+                        <td><a href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank"><img style="height: 70px; border-radius: 50%; background-color: white;" src="4hz.webp" alt="4hzproductions"></a></td>
+                        <td>Parkinson's VR Simulation for Google Cardboard</td>
+                        <td><a class="projectLink1" href="https://play.google.com/store/apps/details?id=com.Hz4.ParkinsonsVR&hl=en_CA&gl=US" target="_blank">ClickHere</a></td>
+                    </tr>
+                    <tr>
+                    <td><a href="https://finalprojectop.ca" target="_blank"><img style="height: 70px; background-color: white; border-radius: 50%;" src="https://finalprojectop.ca/clipart1198344.png" alt="finalprojectop"></a></td>
+                    <td><br>Final Project for a Class in Artificial Intelligence<br>Topic: New Automotive Engineering Proposal</td>
+                    <td><a class="projectLink2" href="https://finalprojectop.ca" target="_blank">ClickHere</a></td>
+                    </tr>
+                </table>
+            </div>  
+
+            <div id="contactDiv" class="contactDivClass" style="padding-top: 1000px; padding-bottom: 500px;">
+                <h2 id="dummyContact"></h2>
+                <h1 id="contact">Contact</h1>
+                <p id="contactP">If you have any questions, concerns, or feedback of any sort, please give me a shout at this link below. If the link does not open, fear not, just email me at: izumlaboratories@gmail.com</p>
+                <div style="text-align: center; display: block; padding-top: 50px;">
+                    <img style="height: 50px; vertical-align: middle; padding-bottom: 20px;" src="gearicon.png" alt="izum laboratories">
+                    <a href = "mailto:izumlaboratories@gmail.com?subject = Feedback&body = Message" class="feedbackLink" style="text-align: center;">
+                        click here to email me
+                    </a>
                 </div>
             </div>
+
         </div>
     </body>
 </html>
